creacion de panel y dialog

--- a/Invoices/SAPUI5/webapp/i18n/i18n.properties
+++ b/Invoices/SAPUI5/webapp/i18n/i18n.properties
@@ -5,3 +5,11 @@ helloPanel = Hello Panel
 
 showHelloButtonText=Say hello
 helloMsg=Hellow {0}
+
+#fragment
+panelFrTitle = Fragment Form
+labelPerson = Name
+
+#Dialog
+helloDialogBut = Say Hello Dialog
+dialogCloseBut = Close
